# kwater_2024_4

./: README.md  pyproject.toml
docker/RTX3080/: Dockerfile  docker-compose.yaml
docker/no-gpu/: Dockerfile  docker-compose.yaml
src/: EDA.ipynb  EDA_A.ipynb  baseline.ipynb
src/utils/: loguri.py  submit.py
