[tool.poetry]
name = "kwater-2024-4"
version = "0.1.0"
description = ""
authors = ["lgh <lghmk2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
matplotlib = "^3.9.3"
ipykernel = "^6.29.5"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
